Putting some place holders for titles and words

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header id="hero"> 
+        <nav>
+            <ul>
+                <li> <a href="index.html">home</a></li>
+                <li> <a href="#">Page1</a></li>
+                <li> <a href="#">Page2</a></li>
+                <li> <a href="#">Page3</a></li>
+                <li> <a href="#">Page4</a></li>
+                <li> <a href="#">Page5</a></li>
+            </ul>
+        </nav>
+        <section id="tagline">
+            <h1>Enter your cool tagline here</h1>
+            <p>Write some additional information</p>
+            <p><a class="button" href="#">Call to Action</a></p>
+        </section>
+    </header>
+    <main>
+        <article>
+            <h2> Article Title</h2>
+            <p>Place your article paragraph or two here</p>
+        </article>
+    </main>
 </body>
 </html>
