Adding a Photo and references

--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
             <p>Place your article paragraph or two here</p>
         </article>
     </main>
+    <footer>
+        <p>Photo by <a href="Photo by Andrea Piacquadio: https://www.pexels.com/photo/photo-of-a-woman-holding-shopping-bags-974911/"></a>Person's name</p>
+    </footer>
 </body>
 </html>
