Adding in images and styling

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <article>
             <h2> Article Title</h2>
             <p>Place your article paragraph or two here</p>
+            <figure>
+                <img src="images/luxury bags.png" width="350">
+            </figure>
         </article>
     </main>
     <footer>
