--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
                 <li> <a href="#">Page3</a></li>
             </ul>
         </nav>
+        <div id="bg"></div>
         <section id="tagline">
             <h1>Enter your cool tagline here</h1>
             <p>Write some additional information</p>
             <p><a class="button" href="#">Call to Action</a></p>
         </section>
+        
     </header>
     <main>
         <article>
