--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         </nav>
         <div id="bg"></div>
         <section id="tagline">
-            <h1>Enter your cool tagline here</h1>
-            <p>Write some additional information</p>
+            <h1>Click here to purchase now!</h1>
+            <p>For more information, email PerfectPurses@luxurydreams.com</p>
             <p><a class="button" href="#">Call to Action</a></p>
         </section>
         
     </header>
     <main>
         <article>
-            <h2> Article Title</h2>
-            <p>Place your article paragraph or two here</p>
+            <h2> Perfect Purses</h2>
+            <p>Wanting to travel the world but need a small bag? Purchase now with discount code: PerfectTime2022</p>
 
         </article>
     </main>
     <footer>
-        <p>Photo by <a href="Photo by Andrea Piacquadio: https://www.pexels.com/photo/photo-of-a-woman-holding-shopping-bags-974911/"></a>Person's name</p>
+        <p>Photo from <a href="https://www.lustonelabel.com/"></a>Lustone Label</p>
     </footer>
 </body>
 </html>
