--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </article>
     </main>
     <footer>
-        <p>Photo from <a href="https://www.lustonelabel.com/"></a>Lustone Label</p>
+        <p>Photo from <a href="https://www.lustonelabel.com/">Lustone Label</a></p>
     </footer>
 </body>
 </html>
