--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <div id="bg"></div>
         <section id="tagline">
             <h1>Click here to purchase now!</h1>
-            <p>For more information, email PerfectPurses@luxurydreams.com</p>
-            <p><a class="button" href="#">Call to Action</a></p>
+            <p>For more information:</p>
+            <p>Email: PerfectPurses@luxurydreams.com</p>
+            <p>Phone: (503) 809 3980
+            <p><a class="button" href="#">Call now!</a></p>
         </section>
         
     </header>
